remove filtering by seasons from API
